--- a/partials/head.html
+++ b/partials/head.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Simon Häfliger</title>
-  <link rel="stylesheet" href="/index.css" />
+  <title>{{#if title}}{{title}} | {{/if}}Simon Häfliger</title>
+  <link rel="stylesheet" href="{{resolve-from-root 'index.css'}}" />
 </head>
