--- a/partials/html.html
+++ b/partials/html.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-  {{> head}}
+<html lang="{{lang}}">
+  {{> head }}
   <body>
     {{> @partial-block }}
   </body>
