--- a/partials/html.html
+++ b/partials/html.html
@@ -2,6 +2,7 @@
 <html lang="{{lang}}">
   {{> head }}
   <body>
-    {{> @partial-block }}
+    <main>{{> @partial-block }}</main>
+    {{> footer }}
   </body>
 </html>
