--- a/index.css
+++ b/index.css
@@ -20,6 +20,36 @@ main {
   max-width: 88%;
 }
 
+dl.inline {
+  -webkit-padding-start: 0;
+}
+
+dl.inline dt {
+  display: inline-block;
+  font-style: italic;
+  margin-top: 1.4rem;
+}
+
+dl.inline dd {
+  display: inline;
+  -webkit-margin-start: 0;
+  margin-bottom: 1.4rem;
+}
+
+.qa {
+  -webkit-padding-start: 0;
+}
+
+.qa dt {
+  margin-top: 1.4rem;
+  font-style: italic;
+}
+
+.qa dd {
+  margin-bottom: 1.4rem;
+  -webkit-margin-start: 0;
+}
+
 .columns {
   display: flex;
 }
